--- a/favicon.html
+++ b/favicon.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
 
   <title>favicon</title>
-  <link rel="shortcut icon" href="./video/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 </head>
 
 <body>
