--- a/og.html
+++ b/og.html
@@ -9,10 +9,10 @@
  
  <!-- og -->
  
- <meta property="or:title" content="오픈그래피 연습">
- <meta property="or:descriptidn" content="오픈그래피 연습으로 깃허브 페이지를 통해 확인합니다.">
- <meta property="or:image" content="https://github.com/ayjvv/rootEx2/images/토토로.jpg">
- <meta property="or:url" content="https://github.com/ayjvv/rootEx2">
+ <meta property="og:title" content="오픈그래피 연습">
+ <meta property="og:descriptidn" content="오픈그래피 연습으로 깃허브 페이지를 통해 확인합니다.">
+ <meta property="og:image" content="https://github.com/ayjvv/rootEx2/images/토토로.jpg">
+ <meta property="og:url" content="https://github.com/ayjvv/rootEx2">
  
 
 
@@ -22,10 +22,10 @@
   <h1>Open Garph 연습</h1>
   <strong><a href="http://org.me" target="_blank">The Open Garph protocol</a></strong>
   <ul>
-    <li>or:title</li>
-    <li>or:descriptidn</li>
-    <li>or:image</li>
-    <li>or:url</li>
+    <li>og:title</li>
+    <li>og:descriptidn</li>
+    <li>og:image</li>
+    <li>og:url</li>
   </ul>
   
 </body>
