--- a/og.html
+++ b/og.html
@@ -10,7 +10,7 @@
  <!-- og -->
  
  <meta property="og:title" content="오픈그래피 연습">
- <meta property="og:descriptidn" content="오픈그래피 연습으로 깃허브 페이지를 통해 확인합니다.">
+ <meta property="og:description" content="오픈그래피 연습으로 깃허브 페이지를 통해 확인합니다.">
  <meta property="og:image" content="https://github.com/ayjvv/rootEx2/images/토토로.jpg">
  <meta property="og:url" content="https://github.com/ayjvv/rootEx2">
  
@@ -23,7 +23,7 @@
   <strong><a href="http://org.me" target="_blank">The Open Garph protocol</a></strong>
   <ul>
     <li>og:title</li>
-    <li>og:descriptidn</li>
+    <li>og:description</li>
     <li>og:image</li>
     <li>og:url</li>
   </ul>
