--- a/og2.html
+++ b/og2.html
@@ -11,8 +11,8 @@
  
  <meta property="og:title" content="오픈그래피 연습">
  <meta property="og:description" content="오픈그래피 연습으로 깃허브 페이지를 통해 확인합니다.">
- <meta property="og:image" content="https://github.com/ayjvv/rootEx2/images/토토로.jpg">
- <meta property="og:url" content="https://github.com/ayjvv/rootEx2">
+ <meta property="og:image" content="https://ayjvv.github.io/rootEx2/images/totoro.jpg">
+ <meta property="og:url" content="https://ayjvv.github.io/rootEx2/og.html">
  
 
 
