--- a/og3.html
+++ b/og3.html
@@ -11,8 +11,8 @@
  
  <meta property="og:title" content="오픈그래피 연습">
  <meta property="og:description" content="오픈그래피 연습으로 깃허브 페이지를 통해 확인합니다.">
- <meta property="og:image" content="https://ayjvv.github.io/rootEx2/images/%ED%86%A0%ED%86%A0%EB%A1%9C.jpg">
- <meta property="og:url" content="https://ayjvv.github.io/rootEx2/og.html">
+ <meta property="og:image" content="https://ayjvv.github.io/rootEx2/images/%EC%9A%94%EC%84%AD2.png">
+ <meta property="og:url" content="https://ayjvv.github.io/rootEx2/og3.html">
  
 
 
