--- a/og3.html
+++ b/og3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
  
   <title>Open Garph 연습</title>
- <meta name="title" content="Open Garph 연습">
+ <meta name="title" content="Open Graph 연습">
  <meta name="description" content="실제 업로드를 통해 or을 확인하는 문서입니다">
  
  <!-- og -->
