--- a/Highlight.html
+++ b/Highlight.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="highlight">
     <meta property="og:description" content="highlight의 소개입니다.">
     <meta property="og:image" content="https://ayjvv.github.io/rootEx2/images/%EC%9A%94%EC%84%AD2.png">
-    <meta property="og:url" content="https://ayjvv.github.io/rootEx2/highlight.html">
+    <meta property="og:url" content="https://ayjvv.github.io/rootEx2/Highlight.html">
 
 
 
