--- a/Highlight.html
+++ b/Highlight.html
@@ -9,9 +9,9 @@
     <meta name="title" content="highligh 나무위키">
     <meta name="description" content="연습을 빌미로 한 highlight 소개입니다.">
 
-    <meta property="og:title" content="highlight">
-    <meta property="og:description" content="highlight의 소개입니다.">
-    <meta property="og:image" content="https://ayjvv.github.io/rootEx2/images/%EC%9A%94%EC%84%AD2.png">
+    <meta property="og:title" content="Highlight">
+    <meta property="og:description" content="Highlight의 소개입니다.">
+    <meta property="og:image" content="https://ayjvv.github.io/rootEx2/images/highlightmain.jpg">
     <meta property="og:url" content="https://ayjvv.github.io/rootEx2/Highlight.html">
 
 
@@ -19,6 +19,211 @@
 </head>
 
 <body>
+
+    <h1>HIGHLIGHT</h1>
+    <P>2009년부터 2017년 2월까지의 활동에 대한 내용은 <a
+            href="https://namu.wiki/w/%EB%B9%84%EC%8A%A4%ED%8A%B8(%EC%95%84%EC%9D%B4%EB%8F%8C)"
+            target="_blank">비스트(아이돌)</a> 문서를 참고 하십시오.</P>
+    <form>
+        <fieldset>
+            <legend>
+                <h2>HIGHLIGHT</h2>
+            </legend>
+            <table border="1">
+                <tr>
+                    <th>윤두준</th>
+                    <th>양요섭</th>
+                    <th>이기광</th>
+                    <th>손동운</th>
+                </tr>
+                <tr>
+                    <td colspan="4"><img src="./images/highlight1.webp" alt="하이라이트 소개"></td>
+                </tr>
+            </table>
+        </fieldset>
+    </form>
+
+    <form>
+        <fieldset>
+            <legend>
+                <h2 id="main1"><strong>목차</strong></h2>
+            </legend>
+
+            <p><a href="#title1">1.</a>개요</p>
+            <p><a href="#title2">2.</a>특징</p>
+            <p><a href="#title3">3.</a>멤버</p>
+            <p><a href="#title4">4.</a>활동</p>
+            <p><a href="#title5">5.</a>팬덤</p>
+
+
+        </fieldset>
+    </form>
+
+
+    <h2 id="title1"><a href="#main1">1.</a>개요</h2>
+    <hr>
+    <img src="./images/highlight2.gif" alt="하이라이트 인사">
+    <p>(하나 둘 셋) 안녕하세요! 하이라이트입니다!<br>
+        대한민국의 4인조 남성 아이돌 그룹으로, 2009년에 데뷔한 그룹 <a
+            href="https://namu.wiki/w/%EB%B9%84%EC%8A%A4%ED%8A%B8(%EC%95%84%EC%9D%B4%EB%8F%8C)" target="_blank">비스트</a>의
+        멤버들이 설립한 <a
+            href="https://namu.wiki/w/%EC%96%B4%EB%9D%BC%EC%9A%B4%EB%93%9C%EC%96%B4%EC%8A%A4%EC%97%94%ED%84%B0%ED%85%8C%EC%9D%B8%EB%A8%BC%ED%8A%B8"
+            target="_blank">새로운 소속사</a>로 둥지를 틀면서 하이라이트라는 이름을 사용하게 되었다.
+    </p>
+
+    <h2 id="title2"><a href="#main1">2.</a>특징</h2>
+    <hr>
+    <p>2017년 3월 20일 정오에 첫 미니 앨범 <a href="https://namu.wiki/w/CAN%20YOU%20FEEL%20IT%3F" target="_blank">CAN YOU FEEL
+            IT?</a> 을 발매하며 그룹 "비스트"가 "하이라이트"라는 새로운 이름으로 컴백했다. 가요계 9년차, 그동안 자신들이 쌓아온 음악적 색깔을 단단히 구축하며 대중적으로 큰 사랑을 받아온
+        "비스트"는 "하이라이트"로 발매한 첫 앨범을 통해 무대를 마음껏 즐기는 모습을 제대로 보여줬고, 대중들이 함께 즐길 수 있는 무대와 음악으로 성공적인 앨범 활동을 마쳤다.</p>
+
+    <p>2017년 5월 29일 첫 번째로 시도한 리패키지 앨범 <a href="https://namu.wiki/w/CALLING%20YOU" target="_blank">CALLING YOU</a>를
+        발매하였다. 전(全) 음악 순위 프로그램 1위 석권, 각종 음원 사이트 주간 1위 등 새로운 기록을 세웠다. '하이라이트'표 음악과 고유한 색깔을 녹인 이번 앨범은 자신들을 믿고 선택해준 많은
+        리스너들에게 감사한 마음을 표현하고, 새롭게 바뀐 그룹명에도 불구하고 여전히 건재함을 한번 더 확실하게 대중들에게 각인시킨 앨범이다.</p>
+
+    <p>2017년 10월 16일 데뷔 8주년 기념 미니 2집 앨범 <a href="https://namu.wiki/w/CELEBRATE" target="_blank">CELEBRATE</a>를 발매하였다. 보다
+        좋은 음악을 많은 팬들과 대중에게 자주 들려주고 싶다는 올해 초 그들의 바람뿐 아니라, 유난히 바람이 많이 불었던 작년 이맘때의 미안했던 마음이 함께 담겨 있는 앨범이다. 2009년 데뷔부터 지금까지
+        줄곧 '하이라이트'만을 바라보는 '라이트'에게 하고 싶은 말들을 담은 앨범.</p>
+
+    <p>2018년 10월 29일 군입대를 앞두고 디지털 싱글 <a href="https://namu.wiki/w/%EC%9E%98%20%EC%A7%80%EB%82%B4%EC%A4%98"
+            target="_blank">잘 지내줘</a>를 발매하였다. 리더 윤두준의 급작스러운 입대로 인해 나머지 멤버들의 목소리만 담겼다. 너와 나의 사이, 그리고 그 속에 숨겨진 수많은 추억들 속에서
+        하고 싶은 이야기는 많지만, 누구보다 소중한 너에게, 그리울 너에게, 보고싶을 너에게 전하고 싶은 메시지들을 결국 잘 지내달란 한 마디로 함축했다. 군백기를 앞둔 하이라이트의 앨범.</p>
+
+    <p>2018년 11월 20일 스페셜 앨범 <a
+            href="https://namu.wiki/w/%ED%95%98%EC%9D%B4%EB%9D%BC%EC%9D%B4%ED%8A%B8(%EC%95%84%EC%9D%B4%EB%8F%8C)/%EC%9D%8C%EB%B0%98%20%EB%AA%A9%EB%A1%9D#s-1.3.1"
+            target="_blank">OUTRO</a>를 발매하였다. 잠깐의 이별(군백기)을 그리고 이미 예정되어 있는 슬픔이나 안타까움에 지나치게 빠지지 않으려고 애썼다. 노래를 부르는 것이 당연하고
+        무대에 서 있는 것이 가장 빛나는 이들 하이라이트가 발매한 OUTRO에는 잘하는 것, 가장 보여주고 싶은 것, 들려주고 싶은 노래들을 담았다.</p>
+
+    <p>2021년 5월 3일 미니 앨범 3집 <a href="https://namu.wiki/w/The%20Blowing" target="_blank">The Blowing</a>을 발매했다. 군백기를 마친
+        하이라이트가 새 출발을 알린 앨범이다. 화려함보다는 기다려준 이들에 대한 메시지와 고유한 감성에 집중하며 하이라이트의 2막을 알렸다.
+
+    <p>2022년 3월 21일 첫 정규앨범 <a href="https://namu.wiki/w/DAYDREAM(%ED%95%98%EC%9D%B4%EB%9D%BC%EC%9D%B4%ED%8A%B8)"
+            target="_blank">DAYDREAM</a> 을 발매했다. 하이라이트 5주년 다음날 발매된 앨범이다.</p>
+
+    <p>2022년 11월 7일 미니 앨범 4집 <a href="https://namu.wiki/w/AFTER%20SUNSET" target="_blank">AFTER SUNSET</a>을 발매했다.</p>
+
+
+    <h2 id="title3"><a href="#main1">3.</a>멤버</h2>
+    <hr>
+
+    <table border="2">
+        <tr>
+            <th colspan="4"><span style="background-color: #A9A9A9; color: #ffffff;">HIGHLIGHT</span></th>
+        </tr>
+
+        <tr>
+            <th><img src="./images/du.webp" alt="윤두준"></th>
+            <th><img src="./images/yang.webp" alt="양요섭"></th>
+            <th><img src="./images/lee.webp" alt="이기광"></th>
+            <th><img src="./images/son.webp" alt="손동운"></th>
+        </tr>
+
+        <tr>
+            <th><span style="background-color: #A9A9A9; color:#ffffff;">윤두준</span></th>
+            <th><span style="background-color: #A9A9A9; color:#ffffff;">양요섭</span></th>
+            <th><span style="background-color: #A9A9A9; color:#ffffff;">이기광</span></th>
+            <th><span style="background-color: #A9A9A9; color:#ffffff;">손동운</span></th>
+        </tr>
+
+        <tr>
+            <td>1989.07.04. (34세)</td>
+            <td>1990.01.05. (34세)</td>
+            <td>1990.03.30. (33세)</td>
+            <td>1991.06.06. (32세)</td>
+        </tr>
+
+        <tr>
+            <th>리더<br>보컬</th>
+            <th>메인보컬</th>
+            <th>리드보컬<br>메인댄서</th>
+            <th>보컬</th>
+        </tr>
+
+
+    </table>
+
+    <h2 id="title4"><a href="#main1">4.</a>활동</h2>
+    <hr>
+    <p>자세한 내용은 <a
+            href="https://namu.wiki/w/%ED%95%98%EC%9D%B4%EB%9D%BC%EC%9D%B4%ED%8A%B8(%EC%95%84%EC%9D%B4%EB%8F%8C)/%ED%99%9C%EB%8F%99"
+            target="_blank">하이라이트(아이돌)/활동</a> 문서를 참고하십시오.</p>
+
+
+
+    <h2 id="title5"><a href="#main1">5.</a>팬덤</h2>
+    <hr>
+    <p><a href="https://namu.wiki/w/%EB%B9%84%EC%8A%A4%ED%8A%B8(%EC%95%84%EC%9D%B4%EB%8F%8C)" target="_blank">비스트</a> 시절
+        팬덤명은 뷰티였는데, 그룹명이 바뀐 만큼 팬덤명 역시 바뀌었다. 2017년 3월 20일 쇼케이스를 통해 하트, 스포트라이트, 문라이트, 마이라이트, 섀도우 총 5개의 명칭을 후보로 채택하게 되었으며,
+        2017년 6월 2일 V라이브를 통해 드디어 팬덤 이름을 공개했다. 최종적으로 정해진 이름은 <a
+            href="https://namu.wiki/w/%EB%9D%BC%EC%9D%B4%ED%8A%B8(%ED%95%98%EC%9D%B4%EB%9D%BC%EC%9D%B4%ED%8A%B8)"
+            target="_blank">Light(라이트)</a> 한다. 그런데 후보에 없었다.</p>
+
+    <p>팬덤명이 없던 기간에는 임시로 '팬덤이름미정팬덤' 을 줄여 미정이라는 애칭으로 부르곤 했으며, 그 와중에 팬덤명을 셰딩으로 정하자는 우스갯소리도 나온 바 있다.</p>
+
+    <hr>
+
+    <h2>나의 덕질돌</h2>
+    <ul>
+        <li><strong><label for="name">그룹/솔로명: </label></strong> <input type="text" name="userName"
+                placeholder="그룹/솔로명을 입력하세요." id="name" autofocus></li>
+        <li><strong><label for="box">특징: </label></strong><textarea name="textBox" id="box" cols="25" rows="3"
+                placeholder="본인이 덕질하는그룹/솔로의 특징을 자유롭게 써주세요."></textarea></li>
+        <li><strong><label for="ymd">날짜: </label></strong><input type="date" name="yymmdd" id="ymd"></li>
+        <li><strong><label for="idol">덕질아이돌 사진 첨부: </label></strong><input type="file" name="file"
+                accept=".jpg, .png, .pdf, .xlsx" id="idol"></li>
+    </ul>
+
+    <hr>
+
+    <h2>설문조사</h2>
+    <form>
+        <fieldset>
+            <legend><span style="background-color: #FFD9EC;">설문조사</span></legend>
+            <strong><label for="name1">이름: </label></strong> <input type="text" name="userName" placeholder="이름을 입력하세요."
+                id="name1"><br>
+            <strong><label for="email">이메일: </label></strong> <input type="email" name="userEmail"
+                placeholder="이메일을 입력하세요." id="email">
+            <hr>
+            <p><strong>나이를 선택해주세요.</strong></p>
+            <input type="radio" name="choice" value="10대">10대
+            <input type="radio" name="choice" value="20대">20대
+            <input type="radio" name="choice" value="30대">30대
+            <input type="radio" name="choice" value="40대">40대
+
+            <hr>
+            <p><label for="Entertainment"><strong>소속사:</strong></label>
+                <select name="Entertainment" id="Entertainment">
+                    <option value="JYP">JYP</option>
+                    <option value="YG">YG</option>
+                    <option value="SM">SM</option>
+                    <option value="기타">기타</option>
+                </select>
+            </p>
+            <hr>
+            <p>*본 설문조사의 결과는 데이터 수집에만 이용됩니다.</p>
+
+            <input type="submit" value="제출">
+            <input type="reset" value="수정">
+
+        </fieldset>
+
+    </form>
+
+    <ul>
+        <li>출처:<a
+                href="https://namu.wiki/w/%ED%95%98%EC%9D%B4%EB%9D%BC%EC%9D%B4%ED%8A%B8%28%EC%95%84%EC%9D%B4%EB%8F%8C%29#toc"
+                target="_blank">나무위키</a></li>
+        <li><a href="#top">맨 위로</a></li>
+    </ul>
+
+
+
+
+
+
+
+
+
 
 </body>
 
