--- a/Highlight.html
+++ b/Highlight.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Highlight">
     <meta property="og:description" content="Highlight의 소개입니다.">
     <meta property="og:image" content="https://ayjvv.github.io/rootEx2/images/highlightmain.jpg">
-    <meta property="og:url" content="https://ayjvv.github.io/rootEx2/Highlight.html">
+    <meta property="og:url" content="https://ayjvv.github.io/rootEx2/Highlight">
 
 
 
@@ -165,7 +165,7 @@
     <h2>나의 덕질돌</h2>
     <ul>
         <li><strong><label for="name">그룹/솔로명: </label></strong> <input type="text" name="userName"
-                placeholder="그룹/솔로명을 입력하세요." id="name" autofocus></li>
+                placeholder="그룹/솔로명을 입력하세요." id="name"></li>
         <li><strong><label for="box">특징: </label></strong><textarea name="textBox" id="box" cols="25" rows="3"
                 placeholder="본인이 덕질하는그룹/솔로의 특징을 자유롭게 써주세요."></textarea></li>
         <li><strong><label for="ymd">날짜: </label></strong><input type="date" name="yymmdd" id="ymd"></li>
