--- a/mqEx3.html
+++ b/mqEx3.html
@@ -16,11 +16,12 @@
       gap: 1vw;
     }
     .txt{
-      background-color: skyblue;
+      background-color: #A5DD9B;
       font-weight: bold;
       display: grid;
       place-content: center;
       height: 40px;
+      font-size: 2rem;
     }
     .txt4{
       display: none;
@@ -44,7 +45,7 @@
       }
       .txt10{
         display: inline;
-        background-color: aqua;
+        background-color: #80BCBD;
       }
     }
 
