--- a/mqEx1.html
+++ b/mqEx1.html
@@ -14,9 +14,11 @@
     }
     .item{
       font-weight: bold;
+      font-size: 2.5rem;
     }
     .item1{
       background-color: blue;
+      color: #fff;
     }
     .item2{
       background-color: skyblue;
