--- a/mqEx2.html
+++ b/mqEx2.html
@@ -14,15 +14,17 @@
     }
     .item{
       font-weight: bold;
+      font-size: 2.5rem;
     }
     .item1{
-      background-color: blue;
+      background-color: #135D66;
+      color: #fff;
     }
     .item2{
-      background-color: skyblue;
+      background-color: #F7C566;
     }
     .item3{
-      background-color: yellow;
+      background-color: #7BC9FF;
     }
 
     @media screen and (min-width: 768px){
@@ -40,7 +42,7 @@
 
     @media (width >= 1200px){
       .container{
-        width: 800px;
+        width: 80vw;
         margin: 0 auto;
         grid-template-columns: 1fr 2fr;
       }
@@ -48,6 +50,7 @@
         grid-column: 2 / 3;
       }
       .item3{
+        grid-row: 1 / 2;
         grid-column: 1 / 2;
       }
     
