--- a/dyami.html
+++ b/dyami.html
@@ -27,8 +27,8 @@
   <link rel="stylesheet" href="../asset/styles/reset.css">
 
   <!-- style -->
-  <link rel="stylesheet" href="./반응형웹연습m.css">
-  <link rel="stylesheet" href="./반응형웹연습pc.css">
+  <link rel="stylesheet" href="./dyami-m.css">
+  <link rel="stylesheet" href="./dyami-pc.css">
 
 </head>
 
