--- a/240417/Design.html
+++ b/240417/Design.html
@@ -235,7 +235,7 @@
 
     <div class="ask-box">
       <h3>담당자명</h3>
-      <input type="text" name="userName" id="user_name" maxlength="10" autofocus>
+      <input type="text" name="userName" id="user_name" maxlength="10">
       <h3 class="h3">연락처</h3>
       <input type="tel" name="urerTel" id="Tel">
       <h3>이메일</h3>
