--- a/240418/index.html
+++ b/240418/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
   <link rel="manifest" href="./favicon/site.webmanifest">
   <!-- og -->
-  <meta property="og:title" content="layout">
+  <meta property="og:title" content="sleep">
   <meta property="og:url" content="https://ayjvv.github.io/rootEx2/">
   <meta property="og:image" content="https://ayjvv.github.io/rootEx2/images/yangjam.jpg">
   <meta property="og:description" content="반응형 웹사이트 연습">
